data/derived/fa15/progs/unify/prog1857.ml.out
Characters 21-28:
  let _ =mulByDigit 8 [4,3,2,7];;
                       ^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type int
